--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,32 @@ wcwidth==0.2.5
 Werkzeug==2.2.2
 WTForms==3.0.1
 zipp==3.9.0
+alembic==1.8.1
+backcall==0.2.0
+click==8.1.3
+colorama==0.4.5
+decorator==5.1.1
+Flask==2.2.2
+Flask-SQLAlchemy==3.0.2
+Flask-WTF==1.0.1
+greenlet==1.1.3.post0
+importlib-metadata==5.0.0
+importlib-resources==5.10.0
+ipython==7.34.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+Mako==1.2.3
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.6
+parso==0.8.3
+pickleshare==0.7.5
+prompt-toolkit==3.0.31
+Pygments==2.13.0
+SQLAlchemy==1.4.42
+traitlets==5.4.0
+typing-extensions==4.4.0
+wcwidth==0.2.5
+Werkzeug==2.2.2
+WTForms==3.0.1
+zipp==3.9.0
